Update execution counts in iris.ipynb

--- a/iris.ipynb
+++ b/iris.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 59,
    "metadata": {
     "_cell_guid": "417ebd30-953c-492a-b185-9bb2742e9fee",
     "_uuid": "f118af7ce42b355fae7faa8db9d5d0157611517d",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 60,
    "metadata": {
     "_cell_guid": "ae265ce5-40f4-447c-aea0-d5ddbe4abeb5",
     "_uuid": "07bf049c5cabf2ecb75818c4e103e94fcf1e49d4"
@@ -132,7 +132,7 @@
        "4   5            5.0           3.6            1.4           0.2  Iris-setosa"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 61,
    "metadata": {
     "_cell_guid": "9257acb0-2b8b-42f5-bc7d-6c08976469f5",
     "_uuid": "84a4b1dbfb7b5a89d3c73e1113482b4b50985b14"
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 62,
    "metadata": {
     "_uuid": "2f51406bff802aae1c0efa7289434a9b60f13bee"
    },
@@ -289,7 +289,7 @@
        "max    150.000000       7.900000      4.400000       6.900000      2.500000"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 63,
    "metadata": {
     "_cell_guid": "13958377-5c7c-420b-b06f-ad5998c59665",
     "_uuid": "876817fced0db3d4bbbd95a64359f124ee6707c4"
@@ -316,7 +316,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 64,
    "metadata": {
     "_cell_guid": "13293bbc-e587-4085-916f-ac5bafbbfaf0",
     "_uuid": "fd15b6089651f32d213555b27b7ffbc0655b6447"
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 65,
    "metadata": {
     "_uuid": "cee3e44ff3c1a3a28ad1eb1df02ead6b331e083a",
     "scrolled": true
@@ -429,12 +429,12 @@
     "_uuid": "edf8f09be66977b2258436e6a9128d6639469d01"
    },
    "source": [
-    "# Modeling with scikit-learn"
+    "# Spliting the Data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 66,
    "metadata": {
     "_cell_guid": "20c0f613-e162-4473-8292-4eca12c7343f",
     "_uuid": "8a9c62f5fe8a7e0a78896d0edac6cf769a6b1751"
@@ -454,14 +454,12 @@
     "_uuid": "3a94f4ab9ad99a6f3df882e201623d241454ef1c"
    },
    "source": [
-    "## Train and test on the same dataset\n",
-    "- This method is not suggested since the end goal is to predict iris species using a dataset the model has not seen before.\n",
-    "- There is also a risk of overfitting the training data."
+    "## Train Test Split"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 67,
    "metadata": {
     "_cell_guid": "b41bb2bc-dfec-4991-8f54-e5cf219f371e",
     "_uuid": "9ecc7d9e7029cfe7f60b83cda36751618b9a7346",
@@ -472,20 +470,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.9736842105263158\n",
+      "Accuracy: 0.9473684210526315\n",
       "Cross-Validation Scores: [0.96666667 0.96666667 0.93333333 0.93333333 1.        ]\n",
       "Mean Cross-Validation Score: 0.96\n"
      ]
     }
    ],
    "source": [
-    "# Create a Random Forest Classifier object\n",
     "rf = RandomForestClassifier()\n",
     "\n",
-    "# Fit the model to the training data\n",
     "rf.fit(X_train, y_train)\n",
-    "\n",
-    "# Make predictions on the test data\n",
     "y_pred = rf.predict(X_test)\n",
     "\n",
     "# Calculate the accuracy score\n",
@@ -500,13 +494,9 @@
     "# auc_score = metrics.roc_auc_score(y_test, y_pred)\n",
     "# print(\"AUC Score:\", auc_score)\n",
     "\n",
-    "# Perform cross-validation\n",
     "cv_scores = cross_val_score(rf, X, y, cv=5)\n",
-    "\n",
-    "# Print the cross-validation scores\n",
     "print(\"Cross-Validation Scores:\", cv_scores)\n",
     "\n",
-    "# Calculate the mean cross-validation score\n",
     "mean_cv_score = cv_scores.mean()\n",
     "print(\"Mean Cross-Validation Score:\", mean_cv_score)\n"
    ]
