Test algo for letter with full dataset

--- a/iris.ipynb
+++ b/iris.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 10,
    "metadata": {
     "_cell_guid": "417ebd30-953c-492a-b185-9bb2742e9fee",
     "_uuid": "f118af7ce42b355fae7faa8db9d5d0157611517d",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 11,
    "metadata": {
     "_cell_guid": "ae265ce5-40f4-447c-aea0-d5ddbe4abeb5",
     "_uuid": "07bf049c5cabf2ecb75818c4e103e94fcf1e49d4"
@@ -132,7 +132,7 @@
        "4   5            5.0           3.6            1.4           0.2  Iris-setosa"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 12,
    "metadata": {
     "_cell_guid": "9257acb0-2b8b-42f5-bc7d-6c08976469f5",
     "_uuid": "84a4b1dbfb7b5a89d3c73e1113482b4b50985b14"
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 13,
    "metadata": {
     "_uuid": "2f51406bff802aae1c0efa7289434a9b60f13bee"
    },
@@ -289,7 +289,7 @@
        "max    150.000000       7.900000      4.400000       6.900000      2.500000"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 14,
    "metadata": {
     "_cell_guid": "13958377-5c7c-420b-b06f-ad5998c59665",
     "_uuid": "876817fced0db3d4bbbd95a64359f124ee6707c4"
@@ -316,7 +316,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 15,
    "metadata": {
     "_cell_guid": "13293bbc-e587-4085-916f-ac5bafbbfaf0",
     "_uuid": "fd15b6089651f32d213555b27b7ffbc0655b6447"
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 16,
    "metadata": {
     "_uuid": "cee3e44ff3c1a3a28ad1eb1df02ead6b331e083a",
     "scrolled": true
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 17,
    "metadata": {
     "_cell_guid": "20c0f613-e162-4473-8292-4eca12c7343f",
     "_uuid": "8a9c62f5fe8a7e0a78896d0edac6cf769a6b1751"
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 18,
    "metadata": {
     "_cell_guid": "b41bb2bc-dfec-4991-8f54-e5cf219f371e",
     "_uuid": "9ecc7d9e7029cfe7f60b83cda36751618b9a7346",
@@ -471,8 +471,8 @@
      "output_type": "stream",
      "text": [
       "Accuracy: 0.9473684210526315\n",
-      "Cross-Validation Scores: [0.96666667 0.96666667 0.93333333 0.93333333 1.        ]\n",
-      "Mean Cross-Validation Score: 0.96\n"
+      "Cross-Validation Scores: [0.96666667 0.96666667 0.93333333 0.9        1.        ]\n",
+      "Mean Cross-Validation Score: 0.9533333333333334\n"
      ]
     }
    ],
