Reorganize and clean

--- a/iris2raisin/merge-target1.ipynb
+++ b/iris2raisin/merge-target1.ipynb
@@ -33,172 +33,73 @@
       "Raisin Column: class  --  Species \n",
       "\n",
       "\n",
-      "Accuracy: 0.87\n",
-      "Accuracy: 0.87\n",
       "Cross-Validation Scores: [0.63, 0.92, 0.81, 0.54]\n",
-      "Accuracy: 0.67\n",
-      "Accuracy: 0.67\n",
       "Cross-Validation Scores: [0.63, 0.92, 0.81, 0.54]\n",
-      "Accuracy: 0.93\n",
-      "Accuracy: 0.93\n",
       "Cross-Validation Scores: [0.63, 0.92, 0.81, 0.54]\n",
-      "Accuracy: 0.73\n",
-      "Accuracy: 0.73\n",
       "Cross-Validation Scores: [0.63, 0.92, 0.81, 0.54]\n",
-      "Accuracy: 0.87\n",
-      "Accuracy: 0.87\n",
       "Cross-Validation Scores: [0.63, 0.92, 0.81, 0.54]\n",
-      "Accuracy: 0.73\n",
-      "Accuracy: 0.73\n",
       "Cross-Validation Scores: [0.63, 0.92, 0.81, 0.54]\n",
-      "Accuracy: 0.67\n",
-      "Accuracy: 0.67\n",
       "Cross-Validation Scores: [0.63, 0.92, 0.81, 0.54]\n",
-      "Accuracy: 0.87\n",
-      "Accuracy: 0.87\n",
       "Cross-Validation Scores: [0.63, 0.92, 0.81, 0.54]\n",
-      "Accuracy: 0.73\n",
-      "Accuracy: 0.73\n",
       "Cross-Validation Scores: [0.63, 0.92, 0.81, 0.54]\n",
-      "Accuracy: 0.93\n",
-      "Accuracy: 0.93\n",
       "Cross-Validation Scores: [0.63, 0.92, 0.81, 0.54]\n",
       "\n",
       "Raisin Column: majoraxislength  --  SepalLengthCm \n",
       "\n",
       "\n",
-      "Accuracy: 0.87\n",
-      "Accuracy: 0.87\n",
       "Cross-Validation Scores: [0.87, 0.87, 0.86, 0.89]\n",
-      "Accuracy: 0.87\n",
-      "Accuracy: 0.87\n",
       "Cross-Validation Scores: [0.87, 0.87, 0.86, 0.89]\n",
-      "Accuracy: 0.93\n",
-      "Accuracy: 0.93\n",
       "Cross-Validation Scores: [0.87, 0.87, 0.86, 0.89]\n",
-      "Accuracy: 0.8\n",
-      "Accuracy: 0.8\n",
       "Cross-Validation Scores: [0.87, 0.87, 0.86, 0.89]\n",
-      "Accuracy: 0.8\n",
-      "Accuracy: 0.8\n",
       "Cross-Validation Scores: [0.87, 0.87, 0.86, 0.89]\n",
-      "Accuracy: 0.73\n",
-      "Accuracy: 0.73\n",
       "Cross-Validation Scores: [0.87, 0.87, 0.86, 0.89]\n",
-      "Accuracy: 0.8\n",
-      "Accuracy: 0.8\n",
       "Cross-Validation Scores: [0.87, 0.87, 0.86, 0.89]\n",
-      "Accuracy: 0.93\n",
-      "Accuracy: 0.93\n",
       "Cross-Validation Scores: [0.87, 0.87, 0.86, 0.89]\n",
-      "Accuracy: 0.93\n",
-      "Accuracy: 0.93\n",
       "Cross-Validation Scores: [0.87, 0.87, 0.86, 0.89]\n",
-      "Accuracy: 1.0\n",
-      "Accuracy: 1.0\n",
       "Cross-Validation Scores: [0.87, 0.87, 0.86, 0.89]\n",
       "\n",
       "Raisin Column: perimeter  --  SepalWidthCm \n",
       "\n",
       "\n",
-      "Accuracy: 0.8\n",
-      "Accuracy: 0.8\n",
       "Cross-Validation Scores: [0.82, 0.89, 0.86, 0.86]\n",
-      "Accuracy: 0.87\n",
-      "Accuracy: 0.87\n",
       "Cross-Validation Scores: [0.82, 0.89, 0.86, 0.86]\n",
-      "Accuracy: 0.87\n",
-      "Accuracy: 0.87\n",
       "Cross-Validation Scores: [0.82, 0.89, 0.86, 0.86]\n",
-      "Accuracy: 0.67\n",
-      "Accuracy: 0.67\n",
       "Cross-Validation Scores: [0.82, 0.89, 0.86, 0.86]\n",
-      "Accuracy: 0.73\n",
-      "Accuracy: 0.73\n",
       "Cross-Validation Scores: [0.82, 0.89, 0.86, 0.86]\n",
-      "Accuracy: 0.87\n",
-      "Accuracy: 0.87\n",
       "Cross-Validation Scores: [0.82, 0.89, 0.86, 0.86]\n",
-      "Accuracy: 0.8\n",
-      "Accuracy: 0.8\n",
       "Cross-Validation Scores: [0.82, 0.89, 0.86, 0.86]\n",
-      "Accuracy: 0.93\n",
-      "Accuracy: 0.93\n",
       "Cross-Validation Scores: [0.82, 0.89, 0.86, 0.86]\n",
-      "Accuracy: 0.8\n",
-      "Accuracy: 0.8\n",
       "Cross-Validation Scores: [0.82, 0.89, 0.86, 0.86]\n",
-      "Accuracy: 0.93\n",
-      "Accuracy: 0.93\n",
       "Cross-Validation Scores: [0.82, 0.89, 0.86, 0.86]\n",
       "\n",
       "Raisin Column: convexarea  --  PetalLengthCm \n",
       "\n",
       "\n",
-      "Accuracy: 0.87\n",
-      "Accuracy: 0.87\n",
       "Cross-Validation Scores: [0.74, 0.84, 0.76, 0.86]\n",
-      "Accuracy: 0.73\n",
-      "Accuracy: 0.73\n",
       "Cross-Validation Scores: [0.74, 0.84, 0.76, 0.86]\n",
-      "Accuracy: 0.8\n",
-      "Accuracy: 0.8\n",
       "Cross-Validation Scores: [0.74, 0.84, 0.76, 0.86]\n",
-      "Accuracy: 0.87\n",
-      "Accuracy: 0.87\n",
       "Cross-Validation Scores: [0.74, 0.84, 0.76, 0.86]\n",
-      "Accuracy: 0.73\n",
-      "Accuracy: 0.73\n",
       "Cross-Validation Scores: [0.74, 0.84, 0.76, 0.86]\n",
-      "Accuracy: 0.73\n",
-      "Accuracy: 0.73\n",
       "Cross-Validation Scores: [0.74, 0.84, 0.76, 0.86]\n",
-      "Accuracy: 0.87\n",
-      "Accuracy: 0.87\n",
       "Cross-Validation Scores: [0.74, 0.84, 0.76, 0.86]\n",
-      "Accuracy: 0.73\n",
-      "Accuracy: 0.73\n",
       "Cross-Validation Scores: [0.74, 0.84, 0.76, 0.86]\n",
-      "Accuracy: 0.73\n",
-      "Accuracy: 0.73\n",
       "Cross-Validation Scores: [0.74, 0.84, 0.76, 0.86]\n",
-      "Accuracy: 0.87\n",
-      "Accuracy: 0.87\n",
       "Cross-Validation Scores: [0.74, 0.84, 0.76, 0.86]\n",
       "\n",
       "Raisin Column: area  --  PetalWidthCm \n",
       "\n",
       "\n",
-      "Accuracy: 0.87\n",
-      "Accuracy: 0.87\n",
       "Cross-Validation Scores: [0.71, 0.87, 0.76, 0.86]\n",
-      "Accuracy: 0.73\n",
-      "Accuracy: 0.73\n",
       "Cross-Validation Scores: [0.71, 0.87, 0.76, 0.86]\n",
-      "Accuracy: 0.87\n",
-      "Accuracy: 0.87\n",
       "Cross-Validation Scores: [0.71, 0.87, 0.76, 0.86]\n",
-      "Accuracy: 0.8\n",
-      "Accuracy: 0.8\n",
       "Cross-Validation Scores: [0.71, 0.87, 0.76, 0.86]\n",
-      "Accuracy: 0.73\n",
-      "Accuracy: 0.73\n",
       "Cross-Validation Scores: [0.71, 0.87, 0.76, 0.86]\n",
-      "Accuracy: 0.73\n",
-      "Accuracy: 0.73\n",
       "Cross-Validation Scores: [0.71, 0.87, 0.76, 0.86]\n",
-      "Accuracy: 0.87\n",
-      "Accuracy: 0.87\n",
       "Cross-Validation Scores: [0.71, 0.87, 0.76, 0.86]\n",
-      "Accuracy: 0.73\n",
-      "Accuracy: 0.73\n",
       "Cross-Validation Scores: [0.71, 0.87, 0.76, 0.86]\n",
-      "Accuracy: 0.8\n",
-      "Accuracy: 0.8\n",
       "Cross-Validation Scores: [0.71, 0.87, 0.76, 0.86]\n",
-      "Accuracy: 0.87\n",
-      "Accuracy: 0.87\n",
-      "Cross-Validation Scores: [0.71, 0.87, 0.76, 0.86]\n"
+      "Cross-Validation Scores: [0.71, 0.87, 0.76, 0.86]\n",
+      "Final Cross-Validation Score: 0.8110000000000004\n"
      ]
     },
     {
@@ -230,27 +131,21 @@
     "\n",
     "X = data.drop('Species', axis=1)\n",
     "y = data['Species']\n",
-    "#  usar stratified kfold\n",
+    "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, train_size=0.75)\n",
     "\n",
     "knn_classifier = KNeighborsClassifier()\n",
-    "\n",
-    "# Train the classifier\n",
     "knn_classifier.fit(X_train, y_train)\n",
     "\n",
     "y_pred = knn_classifier.predict(X_test)\n",
     "\n",
     "accuracy = round(metrics.accuracy_score(y_test, y_pred), 2)\n",
     "accuracy_overall.append(accuracy)\n",
-    "#f1_score = round(metrics.f1_score(y_test, y_pred), 2)\n",
-    "#auc_score = round(roc_auc_score(y_test, y_pred), 2)\n",
     "cross_val_scores = cross_val_score(knn_classifier, X, y, cv=4)\n",
     "cross_val_scores = [round(score, 2) for score in cross_val_scores]\n",
     "\n",
     "\n",
     "print(\"Accuracy:\", accuracy)\n",
-    "#print(\"F1 Score:\", f1_score)\n",
-    "#print(\"AUC Score:\", auc_score)\n",
     "print(\"Cross-Validation Scores:\", cross_val_scores)\n",
     "\n",
     "for index in range(num_columns):\n",
@@ -277,26 +172,19 @@
     "\n",
     "        accuracy = round(metrics.accuracy_score(y_test, y_pred), 2)\n",
     "        average_accuracy = average_accuracy + accuracy\n",
-    "        print(\"Accuracy:\", accuracy)\n",
-    "        #f1_score = round(metrics.f1_score(y_test, y_pred), 2)\n",
-    "        #auc_score = round(roc_auc_score(y_test, y_pred), 2)\n",
     "        cross_val_scores = cross_val_score(knn_classifier, X, Y, cv=4)\n",
     "        cross_val_scores = [round(score, 2) for score in cross_val_scores]\n",
     "\n",
-    "\n",
-    "        print(\"Accuracy:\", accuracy)\n",
-    "        #print(\"F1 Score:\", f1_score)\n",
-    "        #print(\"AUC Score:\", auc_score)\n",
     "        print(\"Cross-Validation Scores:\", cross_val_scores)\n",
     "\n",
     "    average_accuracy = average_accuracy/n_splits\n",
     "    accuracy_overall.append(average_accuracy)\n",
     "\n",
     "plt.plot(accuracy_overall)\n",
-    "plt.xlabel('Iteration')\n",
+    "plt.xlabel('Iteration - Iris -> Raisin')\n",
     "plt.ylabel('Accuracy')\n",
     "plt.title('Accuracy Overall')\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   }
  ],
