--- a/iris2raisin/merge-target2.ipynb
+++ b/iris2raisin/merge-target2.ipynb
@@ -2,9 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/qt/0w2950ws2bxb8smtx1s91h5r0000gn/T/ipykernel_48602/2465339552.py:1: DeprecationWarning: \n",
+      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
+      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
+      "but was not found to be installed on your system.\n",
+      "If this would cause problems for you,\n",
+      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
+      "        \n",
+      "  import pandas as pd\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "from sklearn import metrics\n",
@@ -19,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +245,7 @@
     "\n",
     "X = data.drop('Species', axis=1)\n",
     "y = data['Species']\n",
-    "#  usar stratified kfold\n",
+    "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, train_size=0.75)\n",
     "\n",
     "knn_classifier = KNeighborsClassifier()\n",
@@ -240,15 +255,11 @@
     "\n",
     "accuracy = round(metrics.accuracy_score(y_test, y_pred), 2)\n",
     "accuracy_overall.append(accuracy)\n",
-    "#f1_score = round(metrics.f1_score(y_test, y_pred), 2)\n",
-    "#auc_score = round(roc_auc_score(y_test, y_pred), 2)\n",
     "cross_val_scores = cross_val_score(knn_classifier, X, y, cv=4)\n",
     "cross_val_scores = [round(score, 2) for score in cross_val_scores]\n",
     "\n",
     "\n",
     "print(\"Accuracy:\", accuracy)\n",
-    "#print(\"F1 Score:\", f1_score)\n",
-    "#print(\"AUC Score:\", auc_score)\n",
     "print(\"Cross-Validation Scores:\", cross_val_scores)\n",
     "\n",
     "for index in range(num_columns):\n",
@@ -275,26 +286,19 @@
     "\n",
     "        accuracy = round(metrics.accuracy_score(y_test, y_pred), 2)\n",
     "        average_accuracy = average_accuracy + accuracy\n",
-    "        print(\"Accuracy:\", accuracy)\n",
-    "        #f1_score = round(metrics.f1_score(y_test, y_pred), 2)\n",
-    "        #auc_score = round(roc_auc_score(y_test, y_pred), 2)\n",
     "        cross_val_scores = cross_val_score(knn_classifier, X, Y, cv=4)\n",
     "        cross_val_scores = [round(score, 2) for score in cross_val_scores]\n",
     "\n",
-    "\n",
-    "        print(\"Accuracy:\", accuracy)\n",
-    "        #print(\"F1 Score:\", f1_score)\n",
-    "        #print(\"AUC Score:\", auc_score)\n",
     "        print(\"Cross-Validation Scores:\", cross_val_scores)\n",
     "\n",
     "    average_accuracy = average_accuracy/n_splits\n",
     "    accuracy_overall.append(average_accuracy)\n",
     "\n",
     "plt.plot(accuracy_overall)\n",
-    "plt.xlabel('Iteration')\n",
+    "plt.xlabel('Iteration - Iris -> Raisin')\n",
     "plt.ylabel('Accuracy')\n",
     "plt.title('Accuracy Overall')\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   }
  ],
