Add raisin to iris notebooks

--- a/iris2raisin/merge-target2.ipynb
+++ b/iris2raisin/merge-target2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,16 +19,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of columns: 5\n",
+      "Number of columns: 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import StratifiedKFold\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "\n",
+    "num_columns = iris.shape[1]\n",
+    "print(\"Number of columns:\", num_columns)\n",
+    "iris = iris[['SepalLengthCm', 'SepalWidthCm', 'Species', 'PetalLengthCm', 'PetalWidthCm']]\n",
+    "raisin = raisin[['majoraxislength', 'perimeter', 'class', 'convexarea', 'area']]\n",
+    "iris['Species'] = iris['Species'].map({'Iris-setosa': 0, 'Iris-versicolor': 1, 'Iris-virginica': 2})\n",
+    "iris_columns = iris.columns\n",
+    "raisin_columns = raisin.columns\n",
+    "\n",
+    "accuracy_overall = []\n",
+    "\n",
+    "data = iris"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Fit model with no changes to iris dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Accuracy: 1.0\n",
-      "Cross-Validation Scores: [0.97, 0.95, 0.95, 1.0]\n",
+      "Cross-Validation Scores: [0.97, 0.95, 0.95, 1.0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "X = data.drop('Species', axis=1)\n",
+    "y = data['Species']\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, train_size=0.75)\n",
+    "\n",
+    "knn_classifier = KNeighborsClassifier()\n",
+    "knn_classifier.fit(X_train, y_train)\n",
+    "\n",
+    "y_pred = knn_classifier.predict(X_test)\n",
+    "\n",
+    "accuracy = round(metrics.accuracy_score(y_test, y_pred), 2)\n",
+    "accuracy_overall.append(accuracy)\n",
+    "cross_val_scores = cross_val_score(knn_classifier, X, y, cv=4)\n",
+    "cross_val_scores = [round(score, 2) for score in cross_val_scores]\n",
+    "\n",
+    "print(\"Accuracy:\", accuracy)\n",
+    "print(\"Cross-Validation Scores:\", cross_val_scores)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Change columns from iris dataset to raisin"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n",
       "Raisin Column: majoraxislength  --  SepalLengthCm \n",
       "\n",
@@ -113,39 +188,6 @@
     }
    ],
    "source": [
-    "from sklearn.model_selection import StratifiedKFold\n",
-    "from sklearn.neighbors import KNeighborsClassifier\n",
-    "\n",
-    "num_columns = iris.shape[1]\n",
-    "print(\"Number of columns:\", num_columns)\n",
-    "iris = iris[['SepalLengthCm', 'SepalWidthCm', 'Species', 'PetalLengthCm', 'PetalWidthCm']]\n",
-    "raisin = raisin[['majoraxislength', 'perimeter', 'class', 'convexarea', 'area']]\n",
-    "iris['Species'] = iris['Species'].map({'Iris-setosa': 0, 'Iris-versicolor': 1, 'Iris-virginica': 2})\n",
-    "iris_columns = iris.columns\n",
-    "raisin_columns = raisin.columns\n",
-    "\n",
-    "accuracy_overall = []\n",
-    "\n",
-    "data = iris\n",
-    "\n",
-    "X = data.drop('Species', axis=1)\n",
-    "y = data['Species']\n",
-    "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, train_size=0.75)\n",
-    "\n",
-    "knn_classifier = KNeighborsClassifier()\n",
-    "knn_classifier.fit(X_train, y_train)\n",
-    "\n",
-    "y_pred = knn_classifier.predict(X_test)\n",
-    "\n",
-    "accuracy = round(metrics.accuracy_score(y_test, y_pred), 2)\n",
-    "accuracy_overall.append(accuracy)\n",
-    "cross_val_scores = cross_val_score(knn_classifier, X, y, cv=4)\n",
-    "cross_val_scores = [round(score, 2) for score in cross_val_scores]\n",
-    "\n",
-    "print(\"Accuracy:\", accuracy)\n",
-    "print(\"Cross-Validation Scores:\", cross_val_scores)\n",
-    "\n",
     "for index in range(num_columns):\n",
     "    print(\"\\nRaisin Column:\", raisin_columns[index], \" -- \", iris_columns[index], \"\\n\\n\")\n",
     "    data.iloc[:,index] = raisin.iloc[:,index]\n",
